# ros2-vicon-receiver

vicon_receiver/: CMakeLists.txt
vicon_receiver/include/vicon_receiver/: communicator.hpp
vicon_receiver/launch/: client.launch.py
vicon_receiver/src/vicon_receiver/: communicator.cpp  vicon_test.cpp
